--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
-<p1> Hello World! </p1>
-<p2> we'll have some fun here in the upcoming weeks </p2>
+<h1> Hello World! </h1>
+<p> we'll have some fun here in the upcoming weeks </p>
